# jvm

./: Cargo.toml
src/: loader.rs  main.rs
src/lib/: mod.rs
src/lib/executor/: class.rs  code.rs  field.rs  instance.rs  method.rs  mod.rs  native.rs  op.rs  stack.rs
src/lib/executor/loader/: class_path.rs  mod.rs
src/lib/executor/op/: aload.rs  anewarray.rs  dup.rs  get_static.rs  iconst.rs  ifne.rs  invoke_special.rs  invoke_static.rs  invoke_virtual.rs  ldc.rs  mod.rs  new.rs  putstatic.rs  ret.rs
src/lib/loader/: class_path.rs  mod.rs
src/lib/parser/: attribute.rs  class.rs  constant_pool.rs  descriptor.rs  field.rs  method.rs  mod.rs
src/lib/parser/attribute/: annotation.rs  bootstrap_method.rs  exception.rs  inner_class.rs  line_number_table_entry.rs  local_variable.rs  mod.rs  stack_map_frame.rs
src/loader/: class_path.rs  mod.rs
src/parser/: attribute.rs  class.rs  constant_pool.rs  method.rs  mod.rs
testdata/: Main.java  MainNoMain.java
tests/: integration_test.rs
