[package]
name = "jvm"
version = "0.1.0"
edition = "2021"

[lib]
name = "jvm"
path = "src/lib/mod.rs"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.19", features = ["derive"] }
lazy_static = "1.5.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zip = "2.2.0"
